Fix: typo & navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,8 @@
   -webkit-backdrop-filter: blur(12px);
   background-color: rgba(8, 4, 17, .5);
   transform: translateZ(0);
-  will-change: transform;
+  will-change: transform, backdrop-filter, background-color;
+  transition: all 0.3s ease-in-out;
 }
 
 .timeline-container {
